# quant

./: README.md
algorithmic/rl/: README.md  agent.py  environment.py  main.py  neural_network.py  reinforcement_learning.py  rl_handler.py  visual_manager.py
algorithmic/trader/: Cargo.toml
algorithmic/trader/src/: lib.rs
algorithmic/trader/src/market/: Cargo.toml
algorithmic/trader/src/market/cex/: Cargo.toml
algorithmic/trader/src/market/cex/binance/: Cargo.toml
algorithmic/trader/src/market/cex/binance/src/: client.rs  endpoint.rs  lib.rs
algorithmic/trader/src/market/cex/ftx/: Cargo.toml
algorithmic/trader/src/market/cex/src/: lib.rs
algorithmic/trader/src/market/dex/: Cargo.toml
algorithmic/trader/src/market/dex/src/: lib.rs
algorithmic/trader/src/market/src/: lib.rs
algorithmic/trader/src/utility/src/: api.rs
utility/indicators/: base_model.py  bolinger.py  main.py  rsi.py
utility/scraping_pkg/: data_manager.py  filter.py  main.py  scraping.py  utils.py
