[package]
name = "trader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "traderbin"
path = "src/bin/main.rs"

[lib]
name = "traderlib"
path ="src/lib.rs"

[dependencies]
# extern
tokio = { version = "1.21.2", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
color-eyre = "0.6.2"
dotenv = "0.15.0"

# local
market = { version = "0.1.0", path = "./src/market"}
utility = { version = "0.1.0", path = "./src/utility"}
