[package]
name = "binance"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
utility = { version = "0.1.0", path = "../../../utility"}
reqwest = { version = "0.11", features = ["json"] }
color-eyre = "0.6.2"
serde = "1.0.145"